# encryption-rusted

./: .gitignore  Cargo.toml  README.md  build.rs
src/: chacha.rs  dh.rs  lib.rs  poly1305.rs  util.rs
src/poly1305-donna/: ...  poly1305-donna-32.h
