[package]
name = "encryption"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "encryption"
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8"
lazy_static = "1.4"
pyo3 = { version = "0.19.0" }
rug = "1.20"

[build-dependencies]
cc = "1.0"
